WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314554
Percentage max-width on aspect-ratio box resolves against wrong axis in perpendicular writing mode
https://bugs.webkit.org/show_bug.cgi?id=314554
Summary
Percentage max-width on aspect-ratio box resolves against wrong axis in perpe...
alan
Reported
2026-05-11 07:57:44 PDT
ssia
Attachments
Patch
(12.22 KB, patch)
2026-05-11 08:07 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(12.60 KB, patch)
2026-05-11 09:16 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(12.60 KB, patch)
2026-05-12 05:11 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-05-11 08:07:44 PDT
Created
attachment 479608
[details]
Patch
alan
Comment 2
2026-05-11 09:16:13 PDT
Created
attachment 479611
[details]
Patch
alan
Comment 3
2026-05-12 05:11:04 PDT
Created
attachment 479630
[details]
[fast-cq]Patch
EWS
Comment 4
2026-05-12 06:45:35 PDT
Committed
313078@main
(5e8e53d41007): <
https://commits.webkit.org/313078@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479630
[details]
.
Radar WebKit Bug Importer
Comment 5
2026-05-12 06:46:14 PDT
<
rdar://problem/176879597
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug